prototype/src/compilers/mail/Mail.atg
COMPILER Mail
PRODUCTIONS
  Mail = String "@" String "." Tag.
  String = Char [ String ].
  Tag = Char Char [Char].
  Char = "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z".
END Mail.
